[B]Version 1.0.0[/B]

- Completed Pakee XBMC functionality, testing on Eden Beta1,2