@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.pakee"
        name="Pakee"
-       version="1.0.0"
+       version="1.0.1"
        provider-name="pakee">
   <requires>
-    <import addon="xbmc.python" version="1.0"/>
+    <import addon="xbmc.python" version="2.0"/>
+    <import addon="script.module.beautifulsoup" version="3.0.8"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
         <provides>video</provides>
   </extension>
   <extension point="xbmc.addon.metadata">
-    <summary>Media from Pakistan channels across the web</summary>
-    <description>Watch media from Pakistan channels across the web.</description>
+    <summary>Platform to browse and consume Pakistani media across devices</summary>
+    <description>
+-Browse TV channels, TV shows, movies, actors, fashion, photography, sports, YouTube channels from Pakistan 
+-Browse musicians' albums, songs, Facebook albums, news and YouTube channels 
+-Allows users to play video, music or image content individually or in "play all in list" mode 
+-Allows users to pull any YouTube users playlists, uploaded/favorite videos and playing in "play all in list" mode
+-More info available at http://code.google.com/p/pakee
+</description>
     <platform>all</platform>
   </extension>
 </addon>
