@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
     <string id="30020">Pakee</string>
+    <string id="30021">Play all</string>
 </strings>
