@@ -1,3 +1,3 @@
-<settings>
-    <setting id="play_all" type="bool" label="30000" default="true"/>
-</settings>
+<!-- <settings>
+  <setting id="play_all" type="bool" label="30021" default="true"/> 
+</settings> -->
